Exercice 6 et 7
