# src/controllers/console.controller.ts
@@ -1,6 +1,8 @@
 import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch } from "tsoa";
 import { consoleService } from "../services/console.service";
 import { ConsoleDTO } from "../dto/console.dto";
+import {gameService} from "../services/game.service";
+import {GameDTO} from "../dto/game.dto";
 
 @Route("consoles")
 @Tags("Consoles")
@@ -40,5 +42,10 @@ export class ConsoleController extends Controller {
   ): Promise<ConsoleDTO | null> {
     const { name, manufacturer } = requestBody;
     return consoleService.updateConsole(id, name, manufacturer);
+  }
+
+  @Get('{id}/games')
+  public async getGamesByConsoleId(@Path() id: number): Promise<GameDTO[] | null> {
+    return gameService.getGamesByConsoleId(id);
   }
 }
