# src/controllers/game.controller.ts
@@ -1,6 +1,8 @@
 import { Body, Controller, Get, Patch, Path, Post, Route, Tags } from "tsoa";
 import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
+import {ReviewDTO} from "../dto/review.dto";
+import {reviewService} from "../services/review.service";
 
 @Route("games")
 @Tags("Games")
@@ -32,5 +34,10 @@ export class GameController extends Controller {
   ) : Promise<GameDTO | null> {
     const {title} = requestBody;
     return gameService.updateGame(id, title)
+  }
+
+  @Get('{id}/reviews')
+  public async getReviewByGameId(@Path() id: number): Promise<ReviewDTO[] | null> {
+    return reviewService.getReviewByGameId(id);
   }
 }
